--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
 <body>
     <div class="center"><img class="hero" src="graphics/hero.png" alt="hero image, designs on different screen sizes" ></div>
     <h1>The overview</h1>
+    <p>In this project we created a responsive web based application for a foodtruck called Tyson Bees. 
+        The problem was that the foodtruck did not have any way for the customers to place an order online or 
+        in advance so we created this app to facilitate ordering online from the food truck. We carried out 
+        multiple usability testings with low fidelity wireframes to test out the features and map out the experience, 
+        high fidelity designs to get more feedback on the aesthetics and finally, we tested our final website to get 
+        feedback on the final functionality of the application. All of these usability test sessions helped us make 
+        informed design and development decisions to provide the best user experience. Through our usability 
+        tests we realized that we did not need a filter button for the menu and that people preferred a simplistic 
+        design with an app flow that was clean and had minimal clicks.</p>
+
+        
 </body>
 </html>
