--- a/index.html
+++ b/index.html
@@ -20,6 +20,46 @@
         tests we realized that we did not need a filter button for the menu and that people preferred a simplistic 
         design with an app flow that was clean and had minimal clicks.</p>
 
-        
+    <h1>Context and Challenge</h1>
+    <p>Tyson Bees is a foodtruck located on Univesity of Pennsylvania's campus that serves a variety of different dishes. The project was spanned across 11 weeks and was carried out with a team of 5 people ( Anuj, Gianna, Samiha, Clay and Vidhi ). Each member of the team had a specific role and I was the Designer and Data Architect for this project. As the designer, I was responsible for designing the screens for different sizes like mobile, tablet and desktop and carry out the usability test to get feedback on the same and as the data architect I was responsible for maintaining the files and ensuring everything is documented and easy to locate for all members of the team.<br>
+        <br><strong>Purpose: </strong> To deliver a web based application to allow users to order food from Tyson Bees online. 
+        <br><strong>Problem:</strong>Tyson Bees did not have an online platform to facilitate online ordering and allowing customers to see the menu, truck location, hours of operation and track their rewards at all times. 
+        <br><strong>Goals and Objectives:</strong> The goal was to create a functional application that would allow users to login/signup, place orders, track their orders and track rewards for their past orders. The first determinant of success was for the user to be able to carry out all the goals successfully and have a pleasant experience ordering off the app. We based our success on the results we got from the usability tests where asked our participants their thoughts about the design and experience with the app. A positive result proved that we were successful with the project. 
+        </p>
+    <h1> Process and Insight</h1>
+    <p>We started off by creating user personas and mood boards to brainstorm the different ideas we had for the visuals of the application. We also created a journey map to map the user’s journey and map out pain points and problems. 
+    </p>
+    <div class="user-persona">
+        <img class="up-img" src="graphics/user-persona1.png" alt="user persona 1" >
+        <img class="up-img"src="graphics/user-persona2.png" alt="user persona 2" >
+        <img class="up-img"src="graphics/user-persona3.png" alt="user persona 3" >
+    </div>
+    <p>Next, we created low fidelity wireframes for different screen size to map out the different features and functions of the app. </p>
+    <img class="low-fi" src="graphics/low-fi.png" alt="low fidelity designs" >
+    <p>The designs were later revised based on the feedback we received from the usability tests. I tried out different approaches to the design and played around with color schemes and graphics to push a brand identity and make the designs more continuous and purposeful. I also worked to make the changes in the design based on the feedback we received from the usability session. The main screens that I changed were the order category/ menu page ( to remove the side scroll), added an order history page and made the design more sleek and streamlined in general.</p>
+    <img class="low-fi" src="graphics/hi-fi.png" alt="high fidelity design">
+    <p>We then coded out the design using HTML and CSS. I helped with coding the initial build of the web app. I was also responsible for creating the usability test script to get feedback on the designs which is both qualitative and quantitative. I then carriued out multiple usability tests which helped us with iterating different versions of the website and hear more from the users about their preferences. 
+    </p>
+    <p>The final project was then put together by the developers to add the functionality to the existing designs, maintain the database to allow users to pick from anything in the menu and make the app fully functional and add microinteractions to give a better user experience. 
+    </p>
+    <h1>The solution</h1>
+
+    <div class="horizontal">
+        <div class="vertical">
+        <p>The final website had a categories section for easy navigation to different sub categories, we also had a hamburger menu to navigate to pages like rewards and order history. We had a cart icon in the top so that the user can checkout easily. The app design used a lot of hexagons to reinforce the brand identity. We also included microinteractions for item quantity and deleting an item from the cart. 
+        </p>
+        <h3> <a class="button" href="https://byanuj.com/idm216/final/">Final Website </a> </h3>
+        </div>
+    <img class="solution" src="graphics/hero2.png" alt="designs on multiple screens">
+   </div>
+
+   <h1>Results </h1>
+   <p>I believe the project was a success because our users liked the designs and gave a good rating for their experience. They could successfully carry out the online order without any difficulties or confusion.</p>
+   <div class="results"><img class="results-img" src="graphics/results.png" alt="results" ></div>
+
+
+
+
+
 </body>
 </html>
